# kompute

./: .gitignore  README.md  justfile
.github/workflows/: ci.yml
api/: main.py  pyproject.toml  store.py
api/lib/: config.py
api/lib/cloud_accounts/: cloud_account.py  digital_ocean.py  keyring.py
api/lib/clusters/: clusters.py
api/models/: __init__.py  activity.py  cloud_account.py  cluster.py  config.py  node.py  provider.py  token.py  workload.py
api/models/tests/: test_config.py
api/routers/: activity.py  cloud_account.py  clusters.py  nodes.py  providers.py  tokens.py  workloads.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  globals.css  main.tsx
dashboard/src/components/cloud-accounts/: add-cloud-account-sheet.tsx  provider-mark.tsx
dashboard/src/components/clusters/: add-cluster-sheet.tsx
dashboard/src/components/dashboard/: activity-feed.tsx  cluster-health.tsx  stat-card.tsx
dashboard/src/components/layout/: app-layout.tsx  cluster-switcher.tsx  sidebar.tsx
dashboard/src/components/nodes/: add-cloud-node-sheet.tsx  node-card.tsx  status-dot.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  (+5 more)
dashboard/src/context/: cluster-context.tsx
dashboard/src/data/: mock-activity.ts  providers.ts
dashboard/src/hooks/: use-activity.ts  use-cloud-accounts.ts  use-cluster-nodes.ts  use-providers.ts
dashboard/src/lib/: api.ts  utils.ts
dashboard/src/pages/: cloud-accounts.tsx  clusters.tsx  dashboard.tsx  nodes.tsx  placeholder.tsx
dashboard/src/types/: index.ts
