[project]
name = "kompute-api"
version = "0.1.0"
description = "Kompute control-plane API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "keyring>=25.7.0",
    "pydantic>=2.12.5",
    "pydo>=0.30.0",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "pytest>=9.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # bugbear
    "UP",     # pyupgrade
    "SIM",    # simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line-too-long — ruff format handles it
]

[tool.ruff.lint.isort]
known-first-party = ["models", "routers", "store"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# Kompute uses ty (Astral's type checker) in preview.
# Run with: uv run ty check

[tool.ty.environment]
root = ["."]
